<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-10sp"
    android:background="@color/white"
    tools:context=".VerifyAccount">

  <TextView
      android:id="@+id/textView5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:background="@color/dark_green"
      android:gravity="center"
      android:padding="20sp"
      android:text="@string/account_verification"
      android:textColor="@color/white"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textView7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20sp"
          android:text="@string/sname"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/verify_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20sp"
          android:text="TextView"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textView9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="20sp"
          android:layout_weight="1"
          android:text="@string/mail"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/verify_mail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="20sp"
          android:layout_weight="1"
          android:text="TextView"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/send_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:layout_weight="1"
        android:backgroundTint="@color/dark_green"
        android:text="@string/slink"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/resend_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:layout_weight="1"
        android:backgroundTint="@color/dark_green"
        android:gravity="center"
        android:text="@string/link"
        android:textColor="@color/white"
        android:visibility="invisible" />

    <Button
        android:id="@+id/verification_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:backgroundTint="@color/dark_green"
        android:gravity="center"
        android:text="@string/verfication_complete"
        android:textColor="@color/white"
        android:visibility="invisible" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>