<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-20sp"
    android:background="@color/white"
    tools:context=".PublicInterface">

    <TextView
        android:id="@+id/pcr_public_interface"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_design"
        android:gravity="center"
        android:padding="25sp"
        android:paddingTop="25sp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pcr_public_interface"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/aadhar_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/aadhar_xx"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:layout_constraintVertical_bias="0.053" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/aadhar_text"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="125dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/create_complaint" />

        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_green"
            android:text="@string/create_complaint"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.077"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="115dp"
            android:layout_height="84dp"
            android:layout_margin="20sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_2" />

        <Button
            android:id="@+id/track_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_green"
            android:padding="5sp"
            android:text="@string/track_complaint"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.096"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="93dp"
            android:layout_height="116dp"
            android:layout_weight="1"
            android:padding="10sp"
            app:srcCompat="@drawable/img_3" />

        <Button
            android:id="@+id/raise_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_green"
            android:text="@string/raised_complaints"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.15"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="67dp"
            android:layout_height="93dp"
            android:layout_margin="10sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_4" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_green"
            android:text="@string/verification_requests"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>